# robotsix-cai

./: .env.example  .gitignore  .jscpd.json  .pre-commit-config.yaml  CLAUDE.md  CODEBASE_INDEX.md  Dockerfile  README.md  SDK_SPIKE_NOTES.md  TODO.md  cai.py  cai_analyze.py  cai_audit.py  cai_common.py  cai_confirm.py  cai_fix.py  cai_init.py  cai_revise.py  cai_verify.py  check.py  docker-compose.yml  dump_api.py  entrypoint.sh  explore.py  find_prices.py  gen_test.py  git_head.py  inspect_usage.py  install.sh  output.json  parse.py  probe2.py  probe_genai.py  publish.py  pyd.py  pyproject.toml  read_bytes.py  run_exp.py  run_git.py  run_git2.py  (+11 more)
.cai/: pr-context.md
.claude/: settings.json
cai_lib/: __init__.py  admin_sigils.py  audit_logging.py  cai_subagent.py  claude_argv.py  cmd_agents.py  cmd_cycle.py  cmd_fix.py  cmd_helpers.py  cmd_helpers_git.py  cmd_helpers_github.py  cmd_helpers_issues.py  cmd_implement.py  cmd_lifecycle.py  cmd_misc.py  cmd_rescue.py  cmd_review_docs.py  cmd_unblock.py  config.py  cost_comment.py  cost_summary.py  dispatcher.py  dup_check.py  fsm.py  fsm_confidence.py  fsm_state.py  fsm_states.py  fsm_transitions.py  github.py  issues.py  logging.py  logging_utils.py  parse.py  publish.py  structured_client.py  subprocess.py  subprocess_utils.py  transcript_sync.py  watchdog.py
docs/: _config.yml  agents.md  architecture.md  cai-staging.md  cli.md  configuration.md  fsm.md  index.md  langfuse-server.md  modules.yaml
prompts/: backend-audit-triage.md  backend-audit.md  backend-auto-improve.md  backend-code-audit.md  backend-confirm.md  backend-diagnose.md  backend-fix.md  backend-merge.md  backend-post-merge-review.md  backend-rebase.md  backend-review-pr.md  backend-revise.md  design-decisions.md
scripts/: bootstrap_project.py  check-modules-coverage.py  gen_github_workflows.py  gen_workflow_graphs.py  generate-fsm-docs.py  generate-index.sh  server-cleanup.sh
tests/: _helpers.py  _read_tail.py  test_admin_sigils.py  test_agent_staging.py  test_audit_cost.py  test_audit_logging.py  test_audit_modules.py  test_blocked_on.py  test_cai_audit_cli.py  test_close_completed_parents.py  test_cmd_helpers_git.py  test_cmd_misc_label_sweep.py  test_cost_comment.py  test_cost_summary.py  test_cost_sync.py  test_dispatcher.py  test_dup_check.py  test_fsm.py  test_fsm_schema.py  test_implement_consecutive_failures.py  test_implement_helper_extract.py  test_implement_human_needed_reason.py  test_lint.py  (+35 more)
(+328 files in other folders)
