[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cai"
version = "0.1.0"
description = "Containerized Claude Code launcher with GitHub App identity"
requires-python = ">=3.12"
dependencies = [
    "GitPython>=3.1",
    "PyGithub>=2.3",
    "anthropic>=0.40",
    "langfuse>=3",
    "pydantic>=2",
    "duckduckgo-search>=6",
    "pydantic-ai>=0.0.50",
    "pydantic-deep>=0.3",
    "pydantic-settings>=2",
    "pyyaml>=6",
    "pytest>=8",
    "pre-commit>=3",
    "jinja2>=3",
]

[project.scripts]
cai = "cai.cli:main"
cai-app-init = "cai.github.init:main"
cai-git-credential = "cai.github.credential:main"
cai-issue = "cai.github.issue_cli:main"
cai-solve = "cai.workflows.solve:main"
cai-resolve-conflicts = "cai.workflows.conflicts:main"
cai-audit = "cai.workflows.audit:main"
cai-sourcing = "cai.workflows.sourcing:main"
cai-memory-audit = "cai.workflows.memory_audit:main"
cai-chain-sub-issue = "cai.workflows.chain:main"
cai-ci-triage = "cai.workflows.ci_triage:main"

[tool.hatch.build.targets.wheel]
packages = ["src/cai"]
